several code formatting changes and behind the scenes improvements
Highlights:
- Switch to v2 of WrapWithCondition
- Make HashingWork record respect array elements with equals/hashCode/toString methods
- Fix for a possible NPE in Owner
- Readability improvements